# godot-bevy-template

./: README.md
godot/: project.godot
rust/: Cargo.toml
rust/src/: lib.rs
