[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
